0.3/_sources/reference/kconfig/CONFIG_GPU_SBDF.rst.txt
:orphan:

.. title:: GPU_SBDF

.. option:: CONFIG_GPU_SBDF

*(No prompt -- not directly user assignable.)*

Type: ``hex``

Help
====

A 32-bit integer encoding the segment, bus, device and function of the
GPU. This integer consists of a 16-bit segment ID, 8-bit bus ID, 5-bit
device ID and 3-bit function ID. As an example, for PCI device at
00:02.0 in DRHD segment 0, this SBDF would be (0 << 16) | (0 << 8) |
(2 << 3) | (0 << 0), i.e. 0x00000010.


Direct dependencies
===================

\ :option:`DMAR_PARSE_ENABLED <CONFIG_DMAR_PARSE_ENABLED>`

*(Includes any dependencies from if's and menus.)*

Defaults
========

- 0x00000010 if \ :option:`DMAR_PARSE_ENABLED <CONFIG_DMAR_PARSE_ENABLED>`

Kconfig definition
==================

.. highlight:: kconfig

At ``arch/x86/Kconfig:268``

Included via ``Kconfig:3``

Menu path: (top menu)

.. parsed-literal::

    config GPU_SBDF
    	hex
    	default 0x00000010 if \ :option:`DMAR_PARSE_ENABLED <CONFIG_DMAR_PARSE_ENABLED>`
    	depends on \ :option:`DMAR_PARSE_ENABLED <CONFIG_DMAR_PARSE_ENABLED>`
    	help
    	  A 32-bit integer encoding the segment, bus, device and function of the
    	  GPU. This integer consists of a 16-bit segment ID, 8-bit bus ID, 5-bit
    	  device ID and 3-bit function ID. As an example, for PCI device at
    	  00:02.0 in DRHD segment 0, this SBDF would be (0 << 16) | (0 << 8) |
    	  (2 << 3) | (0 << 0), i.e. 0x00000010.


*(Definitions include propagated dependencies, including from if's and menus.)*